--- a/api/.env
+++ b/api/.env
@@ -20,6 +20,9 @@ LOG_OUTPUT=dev
 TYPEORM_CONNECTION=mysql
 TYPEORM_HOST=localhost
 TYPEORM_PORT=3306
+#TYPEORM_USERNAME=root
+#TYPEORM_PASSWORD=ourdesignz
+#TYPEORM_DATABASE=spurtcommerce
 TYPEORM_USERNAME=spurtcommerce
 TYPEORM_PASSWORD=Yj1XTfVbIIP81dY9
 TYPEORM_DATABASE=spurtcommerce
