--- a/api/.env
+++ b/api/.env
@@ -23,8 +23,8 @@ TYPEORM_PORT=3306
 #TYPEORM_USERNAME=root
 #TYPEORM_PASSWORD=ourdesignz
 #TYPEORM_DATABASE=spurtcommerce
-TYPEORM_USERNAME=spurtcommerce
-TYPEORM_PASSWORD=Yj1XTfVbIIP81dY9
+TYPEORM_USERNAME=root
+TYPEORM_PASSWORD=
 TYPEORM_DATABASE=spurtcommerce
 TYPEORM_SYNCHRONIZE=false
 TYPEORM_LOGGING=["query", "error"]
