added static images for advertisement page

--- a/api/.env
+++ b/api/.env
@@ -22,15 +22,12 @@ TYPEORM_HOST=localhost
 TYPEORM_PORT=3306
 #TYPEORM_USERNAME=root
 #TYPEORM_PASSWORD=ourdesignz
-<<<<<<< HEAD
 #TYPEORM_DATABASE=spurtcommerce
 TYPEORM_USERNAME=root
 TYPEORM_PASSWORD=
-=======
 #TYPEORM_DATABASE=spurtcommerce_one
-TYPEORM_USERNAME=spurtcommerce
+# TYPEORM_USERNAME=spurtcommerce
 TYPEORM_PASSWORD=Yj1XTfVbIIP81dY9
->>>>>>> a31f67e8ed7331f122cff8c8525a259d6000e212
 TYPEORM_DATABASE=spurtcommerce
 TYPEORM_SYNCHRONIZE=false
 TYPEORM_LOGGING=["query", "error"]
