--- a/api/.env
+++ b/api/.env
@@ -21,8 +21,12 @@ TYPEORM_CONNECTION=mysql
 TYPEORM_HOST=localhost
 TYPEORM_PORT=3306
 TYPEORM_USERNAME=root
-TYPEORM_PASSWORD=ourdesignz
-TYPEORM_DATABASE=spurtcommerce_one
+# for staging
+# TYPEORM_PASSWORD=ourdesignz
+# TYPEORM_DATABASE=spurtcommerce_one
+# for local
+TYPEORM_PASSWORD=
+TYPEORM_DATABASE=spurtcommerce
 #TYPEORM_USERNAME=spurtcommerce
 #TYPEORM_PASSWORD=Yj1XTfVbIIP81dY9
 #TYPEORM_DATABASE=spurtcommerce
