--- a/store/package.json
+++ b/store/package.json
@@ -43,6 +43,7 @@
         "@ngx-share/button": "^7.1.2",
         "@ngx-share/core": "^7.1.2",
         "angular-6-social-login": "^1.1.1",
+        "angularx-social-login": "^4.1.0",
         "core-js": "2.5.7",
         "file-saver": "^1.3.8",
         "hammerjs": "2.0.8",
