--- a/api/.env
+++ b/api/.env
@@ -21,7 +21,7 @@ TYPEORM_CONNECTION=mysql
 TYPEORM_HOST=localhost
 TYPEORM_PORT=3306
 TYPEORM_USERNAME=root
-TYPEORM_PASSWORD=ourdesignz
+TYPEORM_PASSWORD=
 TYPEORM_DATABASE=spurtcommerce_one
 
 #TYPEORM_USERNAME=spurtcommerce
