personal information is in progress

--- a/api/.env
+++ b/api/.env
@@ -20,13 +20,13 @@ LOG_OUTPUT=dev
 TYPEORM_CONNECTION=mysql
 TYPEORM_HOST=localhost
 TYPEORM_PORT=3306
-#TYPEORM_USERNAME=root
-#TYPEORM_PASSWORD=ourdesignz
-#TYPEORM_DATABASE=spurtcommerce_one
+TYPEORM_USERNAME=root
+TYPEORM_PASSWORD=
+TYPEORM_DATABASE=spurtcommerce_one
 
-TYPEORM_USERNAME=spurtcommerce
-TYPEORM_PASSWORD=Yj1XTfVbIIP81dY9
-TYPEORM_DATABASE=spurtcommerce
+# TYPEORM_USERNAME=spurtcommerce
+# TYPEORM_PASSWORD=Yj1XTfVbIIP81dY9
+# TYPEORM_DATABASE=spurtcommerce
 
 TYPEORM_SYNCHRONIZE=false
 TYPEORM_LOGGING=["query", "error"]
