api port change

--- a/api/.env
+++ b/api/.env
@@ -4,7 +4,7 @@
 APP_NAME=spurtCommerce
 APP_SCHEMA=http
 APP_HOST=localhost
-APP_PORT=9000
+APP_PORT=9016
 APP_ROUTE_PREFIX=/api
 APP_BANNER=true
 
@@ -65,8 +65,8 @@ MONITOR_PASSWORD=1234
 
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
-MAIL_USERNAME=USERNAME
-MAIL_PASSWORD=PASSWORD
+MAIL_USERNAME=javirs210@gmail.com
+MAIL_PASSWORD=singh@*005
 MAIL_PORT=465
 MAIL_SECURE=true
 MAIL_ENCRYPTION=tls
