admin changes mail and change mail temlate

--- a/api/.env
+++ b/api/.env
@@ -64,13 +64,13 @@ MONITOR_PASSWORD=1234
 #
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_USERNAME=javirs210@gmail.com
-MAIL_PASSWORD=singh@*005
+MAIL_HOST=in-v3.mailjet.com
+MAIL_USERNAME=c37312d5e6b46dcdfad3db81eb483b2e
+MAIL_PASSWORD=f855ac6b529cf9d39770f0c4ed01e4d0
 MAIL_PORT=465
 MAIL_SECURE=true
 MAIL_ENCRYPTION=tls
-MAIL_FROM=YOUR EMAIL ID
+MAIL_FROM=website@stagingwebsites.info
 
 #
 # File Upload System (local or s3)
